fix: button icon and children alignment

--- a/styles/app.css
+++ b/styles/app.css
@@ -46,7 +46,7 @@ html, body {
 
 /* 🔘 Button */
 .button {
- @apply rounded-md focus:outline-none focus:ring focus:ring-primary-300 space-x-1.5;
+ @apply rounded-md focus:outline-none focus:ring focus:ring-primary-300 gap-x-1.5 inline-flex items-center;
 }
 
 .button--base {
